--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,11 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+body {
+    background-color: #000000;
+}
 .main {
+    
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
